--- a/ads.htm
+++ b/ads.htm
@@ -29,78 +29,82 @@
                 </div>
             </div>
         </nav>
-        <table id="ads" class="clear" border="1">
-          <tr>
-            <td>
-              <table class="clear" border="1">
-                  <tr>
-                      <td id="stock-market-header" colspan="2">
-                          Welcome to the Greek Stock Market!
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          Olive Oil
-                      </td>
-                      <td>
-                          /\ 10503 Drachmas (since this morning)
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          Murex Shell
-                      </td>
-                      <td>
-                          /\ 33502 Drachmas (since this morning)
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          Silver
-                      </td>
-                      <td>
-                          \/ 193 Drachmas (since this morning)
-                      </td>
-                  </tr>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div id="myCarousel" class="carousel slide" data-ride="carousel">
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner" role="listbox">
-                  <div class="item active">
-                      <img class="img-responsive center-block" src="images/glasses-1.jpg" alt="Cyclops Glasses">
-                  </div>
-                  <div class="item">
-                      <img class="img-responsive center-block" src="images/glasses-2.jpg" alt="Cyclops Glasses">
-                  </div>
-                  <div class="item">
-                      <img class="img-responsive center-block" src="images/glasses-2.jpg" alt="Cyclops Glasses">
-                  </div>
-                  <div class="item">
-                      <img class="img-responsive center-block" src="images/glasses-3.jpg" alt="Cyclops Glasses">
-                  </div>
-                  <div class="item">
-                      <img class="img-responsive center-block" src="images/glasses-4.jpg" alt="Cyclops Glasses">
-                  </div>
-                  <div class="item">
-                      <img class="img-responsive center-block" src="images/glasses-5.jpg" alt="Cyclops Glasses">
-                  </div>
-                  <div class="item">
-                      <img class="img-responsive center-block" src="images/glasses-6.jpg" alt="Cyclops Glasses">
-                  </div>
-                  <!-- Left and right controls -->
-                  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                  <span>Previous</span>
-                  </a>
-                  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                  <span>Next</span>
-                  </a>
-              </div>
-            </td>
-          </tr>
+        <table id="ads" class="clear" border="3">
+          <tbody>
+            <tr>
+              <td>
+                <table class="clear" border="1">
+                  <tbody>
+                    <tr>
+                        <td id="stock-market-header" colspan="2">
+                            Welcome to the Greek Stock Market!
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Olive Oil
+                        </td>
+                        <td>
+                            /\ 10503 Drachmas (since this morning)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Murex Shell
+                        </td>
+                        <td>
+                            /\ 33502 Drachmas (since this morning)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Silver
+                        </td>
+                        <td>
+                            \/ 193 Drachmas (since this morning)
+                        </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h4>Say Friend, is your vision failing? Are you a one-eyed Lonesome Monster? Well, come on down to</h4>
+                <h3 id="eyeball"><span id="eye">Eye</span> <span id="ball">Ball</span> <span id="emporium">Emporium!</span></h3>
+                <h5>We have hundreds of glasses just right for all one-eyed folk, and our employees won&#39;t make you feel insecure at all! If you send a messenger today, you will also receive a contact lens, absolutely free! (with an additional payment of 30,000 Drachmas) We are located at 1034 Polyphemus street on Blinded Avenue, where we&#39;ll Make sure You&#39;re back in tip-top shape to continue killing all mortals who enter your lair!</h5>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img class="img-responsive center-block" src="images/glasses-1.jpg" alt="Cyclops Glasses">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive center-block" src="images/glasses-2.jpg" alt="Cyclops Glasses">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive center-block" src="images/glasses-3.jpg" alt="Cyclops Glasses">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive center-block" src="images/glasses-4.jpg" alt="Cyclops Glasses">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive center-block" src="images/glasses-5.jpg" alt="Cyclops Glasses">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive center-block" src="images/glasses-6.jpg" alt="Cyclops Glasses">
+                    </div>
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span>Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span>Next</span>
+                    </a>
+                </div>
+              </td>
+            </tr>
+          </tbody>
         </table>
     </body>
 </html>
